--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* ==========================================
-   INFINITY CREATION - FILM STUDIO WEBSITE
+   INFINITY CREATIONS - FILM STUDIO WEBSITE
    Design System & Styles
    ========================================== */
 
