--- a/styles.css
+++ b/styles.css
@@ -605,6 +605,8 @@ a {
 .contact-social-link {
     width: 50px;
     height: 50px;
+    min-width: 50px;
+    min-height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -613,6 +615,8 @@ a {
     font-size: 1.5rem;
     transition: var(--transition-standard);
     color: var(--color-light-gray);
+    flex-shrink: 0;
+    line-height: 0;
 }
 
 .contact-social-link:hover {
